// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/Create/PageHeaderExtra render create title 1`] = `
<body>
  <div>
    <button
      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
      type="button"
    >
      <span>
        重 置
      </span>
    </button>
  </div>
</body>
`;

exports[`sqle/Order/Create/PageHeaderExtra render when is not created 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span>
            编辑工单信息
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
          type="button"
        >
          <span>
            提交工单
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Create/PageHeaderExtra render when is not created and createLoading 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          disabled=""
          type="button"
        >
          <span>
            编辑工单信息
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
          disabled=""
          type="button"
        >
          <span>
            提交工单
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Create/PageHeaderExtra render when is not created and is disabled finally 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span>
            编辑工单信息
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
              disabled=""
              type="button"
            >
              <span>
                提交工单
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Create/PageHeaderExtra render when it is created result 1`] = `
<body>
  <div />
</body>
`;
